# whisper.cpp

.github/workflows/: a  c-cpp.yml
examples/stream.wasm/: CMakeLists.txt
